--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,15 @@
                 <option value="flying">Flying</option>
                 <option value="ice">Ice</option>
             </select>
+            <select id="weaknessFilter">
+                <option value="">Filter by weakness</option>
+                <option value="fire">Fire</option>
+                <option value="water">Water</option>
+                <option value="grass">Grass</option>
+                <option value="electric">Electric</option>
+                <option value="psychic">Psychic</option>
+                <option value="ice">Ice</option>
+            </select>
             <select id="sortName">
                 <option value="">Sort by name</option>
                 <option value="nameAsc">Name (A-Z)</option>
@@ -36,6 +45,8 @@
                 <option value="numberAsc">Number (Ascending)</option>
                 <option value="numberDesc">Number (Descending)</option>
             </select>
+            <button id="randomize">Randomize</button>
+            <button id="clearFilter">Clear</button>
         </div>
         <img src="assets/pokemon_logo.png" alt="Pokémon Logo" class="logo">
     </header>
