card background and card modal feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,6 +51,15 @@
         <img src="assets/pokemon_logo.png" alt="Pokémon Logo" class="logo">
     </header>
     <main id="pokemon-container"></main>
+    
+    <!-- Ensure this modal structure is present -->
+    <div id="pokemon-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <div id="pokemon-details"></div>
+        </div>
+    </div>
+    
     <footer>
         <button id="prev">Previous</button>
         <button id="next">Next</button>
