--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,60 +44,50 @@
                 <option value="">Filter by type</option>
                 <option value="grass">Grass</option>
                 <option value="poison">Poison</option>
-                <option value="bug">bug</option>
-                <option value="dark">dark</option>
-                <option value="dragon">dragon</option>
-                <option value="electric">electric</option>
+                <option value="bug">Bug</option>
+                <option value="dark">Dark</option>
+                <option value="dragon">Dragon</option>
+                <option value="electric">Electric</option>
                 <option value="fairy">Fairy</option>
-                <option value="fighting">fighting</option>
-                <option value="fire">fire</option>
+                <option value="fighting">Fighting</option>
+                <option value="fire">Fire</option>
                 <option value="flying">Flying</option>
-                <option value="ghost">ghost</option>
-                <option value="psychic">psychic</option>
-                <option value="ground">ground</option>
-                <option value="ice">ice</option>
-                <option value="normal">normal</option>
-                <option value="rock">rock</option>
-                <option value="steel">steel</option>
-                <option value="water">water</option>
-                
+                <option value="ghost">Ghost</option>
+                <option value="psychic">Psychic</option>
+                <option value="ground">Ground</option>
+                <option value="ice">Ice</option>
+                <option value="normal">Normal</option>
+                <option value="rock">Rock</option>
+                <option value="steel">Steel</option>
+                <option value="water">Water</option>
             </select>
             <select id="weaknessFilter">
-                <option value="">Filter by weakness</option>
-                <option value="fire">Fire</option>
-                <option value="water">Water</option>
-                <option value="grass">Grass</option>
-                <option value="electric">Electric</option>
-                <option value="psychic">Psychic</option>
                 <option value="">Filter by type</option>
                 <option value="grass">Grass</option>
                 <option value="poison">Poison</option>
-                <option value="bug">bug</option>
-                <option value="dark">dark</option>
-                <option value="dragon">dragon</option>
-                <option value="electric">electric</option>
+                <option value="bug">Bug</option>
+                <option value="dark">Dark</option>
+                <option value="dragon">Dragon</option>
+                <option value="electric">Electric</option>
                 <option value="fairy">Fairy</option>
-                <option value="fighting">fighting</option>
-                <option value="fire">fire</option>
+                <option value="fighting">Fighting</option>
+                <option value="fire">Fire</option>
                 <option value="flying">Flying</option>
-                <option value="ghost">ghost</option>
-                <option value="psychic">psychic</option>
-                <option value="ground">ground</option>
-                <option value="ice">ice</option>
-                <option value="normal">normal</option>
-                <option value="rock">rock</option>
-                <option value="steel">steel</option>
-                <option value="water">water</option>
+                <option value="ghost">Ghost</option>
+                <option value="psychic">Psychic</option>
+                <option value="ground">Ground</option>
+                <option value="ice">Ice</option>
+                <option value="normal">Normal</option>
+                <option value="rock">Rock</option>
+                <option value="steel">Steel</option>
+                <option value="water">Water</option>
             </select>
-            <select id="sortName">
-                <option value="">Sort by name</option>
+            <select id="sortSelect">
+                <option value="">Sort by...</option>
                 <option value="nameAsc">Name (A-Z)</option>
                 <option value="nameDesc">Name (Z-A)</option>
-            </select>
-            <select id="sortNumber">
-                <option value="">Sort by number</option>
-                <option value="numberAsc">Number (Ascending)</option>
-                <option value="numberDesc">Number (Descending)</option>
+                <option value="numberAsc">Number (Low to High)</option>
+                <option value="numberDesc">Number (High to Low)</option>
             </select>
             <button id="randomize">Randomize</button>
             <button id="clearFilter">Clear</button>
