adding some header css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,7 @@
                 <option value="water">Water</option>
             </select>
             <select id="weaknessFilter">
-                <option value="">Filter by type</option>
+                <option value="">Filter weaknesses</option>
                 <option value="grass">Grass</option>
                 <option value="poison">Poison</option>
                 <option value="bug">Bug</option>
