--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,6 +114,25 @@
         </div>
     </div>
 
+    <!-- Custom Alert Modal -->
+    <div id="customAlert" class="modal">
+        <div class="modal-content">
+            <span class="close-button" onclick="closeAlert()">×</span>
+            <p id="alertMessage"></p>
+            <button onclick="closeAlert()">OK</button>
+        </div>
+    </div>
+
+    <!-- Custom Prompt Modal -->
+    <div id="customPrompt" class="modal">
+        <div class="modal-content">
+            <span class="close-button" onclick="closePrompt()">×</span>
+            <p id="promptMessage"></p>
+            <input type="text" id="promptInput" placeholder="Enter your choice">
+            <button onclick="submitPrompt()">Submit</button>
+        </div>
+    </div>
+
     <footer>
         <div class="pagination">
             <button id="prev">Previous</button>
@@ -126,6 +145,7 @@
         <button id="selectOpponentBtn">Select Opponent</button>
     </footer>
 
+    <script src="utils.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
