added retun to home button

--- a/frontend/battle.html
+++ b/frontend/battle.html
@@ -54,6 +54,8 @@
         </div>
     </div>
 
+    <button id="returnHomeBtn" class="return-home-button">Return to Home</button>
+
     <script src="utils.js"></script>
     <script src="battle.js"></script>
 </body>
